# thesis-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frames.gv  package.xml
launch/: gazebo.launch  moveit_control.launch  simulation.launch  test.launch
logs/: poses.md
msg/: TargetObjectPcl.msg
scripts/: ]\  box_to_hand.py  dev.py  little_actions.py  main.py  move_server.py  publisher.py  states.py  waiter.py
scripts/servers/: api_server.py  find_server.py  grab_server.py  move_server.py  release_server.py
src/: client.cpp  getPclParams.cpp  moveit_control.py  test_script.py
srv/: Find.srv  Grab.srv  Release.srv  TargetOffsetPose.srv
worlds/: env.world  test.world
